# lxcomm

./: .gitignore  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  rust-toolchain.toml
.github/workflows/: release.yml
assets/: lxcomm.graphite  lxcomm_icon.graphite
src/: browser.rs  collections.rs  extensions.rs  files.rs  lib.rs  library.rs  loading.rs  main.rs  markup.rs  metadata.rs  mod_edit.rs  platform.rs  snapshot.rs  steam_manifest.rs  steamcmd.rs  web.rs  widgets.rs  xcom_mod.rs
test/: appworkshop_268500.acf
test/ExampleProfile/: data.json
test/ExampleProfile/Config/: XComAI.ini  XComAIJobs.ini  XComAutoPlay.ini  XComBenchmark.ini  XComBrands.ini  XComCamera.ini  XComChallengeData.ini  XComCheats.ini  XComClassData.ini  XComCompat.ini  XComContent.ini  XComEncounterLists.ini  XComEncounters.ini  XComEncyclopedia.ini  XComEngine.ini  XComGame.ini  XComGameBoard.ini  XComGameCore.ini  XComGameData.ini  XComGameData_CharacterStats.ini  XComGameData_SoldierSkills.ini  XComGameData_WeaponData.ini  XComGameData_XpData.ini  XComInput.ini  XComLW_SecondWaveData.ini  XComLWoTC_Version.ini  XComLadder.ini  XComLightmass.ini  XComMPCharacterData.ini  XComMPGame.ini  XComMaps.ini  XComMetaData.ini  XComMissionDefs.ini  XComMissionSources.ini  XComMissions.ini  XComModOptions.ini  XComNameList.ini  XComNarrative.ini  XComPCPs.ini  XComParcels.ini  (+12 more)
test/ExampleProfile/SaveData/: save_AUTOSAVE- Campaign 1, Mission 1, Turn 1  save_AUTOSAVE- Campaign 1, Mission 1, Turn 2  save_AUTOSAVE- Campaign 1, Mission 1, Turn 3  save_Save 2_1
test/IncrementalSnapshotTest/Base/: README.md
test/IncrementalSnapshotTest/Final/: README.md
test/IncrementalSnapshotTest/Revision1/: README.md
