[package]
name = "lxcomm"
version = "0.1.0"
edition = "2024"
license = "MIT OR APACHE-2.0"
repository = "https://github.com/phantomshift/lxcomm"
description = "Mod browser and downloader made specifically for usage with the GOG version of XCOM2(WOTC) on Linux."

[dependencies]
bevy_reflect = "0.16.1"
blake3 = "1.8.2"
bstr = "1.12.0"
dircpy = "0.3.19"
etcetera = "0.10.0"
eyre = "0.6.12"
indoc = "2.0.6"
keyring = { git = "https://github.com/open-source-cooperative/keyring-rs", version = "4.0.0-rc.2" }
keyvalues-serde = "0.2.2"
moka = { version = "0.12.10", features = ["future", "sync"] }
notify = "8.1.0"
opener = "0.8.2"
reqwest = "0.12.22"
rfd = { version = "0.15.4", default-features = false, features = ["tokio", "xdg-portal"] }
ringmap = "0.1.4"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
# similar = "2.7.0"
steam-rs = "0.5.1"
strip-ansi-escapes = "0.2.1"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
thiserror = "2.0.12"
tokio = "1.46.0"
tokio-util = { version = "0.7.15", features = ["rt"] }
which = "8.0.0"

[target.'cfg(windows)'.dependencies]
single-instance = "0.3.3"

[target.'cfg(not(windows))'.dependencies]
zbus = "5.7.1"
iced_fonts = { git = "https://github.com/Redhawk18/iced_fonts.git", version = "0.2.0", features = ["fontawesome"] }

[dependencies.iced]
version = "0.14.0-dev"
features = ["advanced", "highlighter", "image", "lazy", "markdown", "svg", "tokio"]
# features = ["advanced", "image", "lazy", "markdown", "svg", "tokio"]
# git = "https://github.com/iced-rs/iced"

[dependencies.iced_aw]
version = "0.13.0-dev"
default-features = false
features = ["card", "grid", "labeled_frame", "number_input", "spinner"]
git = "https://github.com/phantomshift/iced_aw"
branch = "redhawk-more-highlights"

[patch.crates-io]
iced = { git = "https://github.com/phantomshift/iced.git", version = "0.14.0-dev", rev = "2657e8e" }
iced_core = { git = "https://github.com/phantomshift/iced.git", version = "0.14.0-dev", rev = "2657e8e" }
iced_widget = { git = "https://github.com/phantomshift/iced.git", version = "0.14.0-dev", rev = "2657e8e" }
steam-rs = { git = "https://github.com/phantomshift/steam-rs.git", branch = "get-details"}

[profile.dev]
# Strange issue with loading lots of images,
# for now building with some optimizations on is enough to alleviate this
# see https://github.com/iced-rs/iced/issues/2166
opt-level = 1
