[package]
name = "lxcomm"
version = "0.2.0"
edition = "2024"
license = "MIT OR APACHE-2.0"
repository = "https://github.com/phantomshift/lxcomm"
description = "Mod browser and downloader made specifically for usage with the GOG version of XCOM2(WOTC) on Linux."

[features]
dbus = ["zbus"]

[dependencies]
apply = "0.3.0"
bevy_reflect = "0.16.1"
blake3 = "1.8.2"
bstr = "1.12.0"
derivative = "2.2.0"
dircpy = "0.3.19"
etcetera = "0.10.0"
eyre = "0.6.12"
fuse-rust = "0.4.0"
humantime = "2.2.0"
indoc = "2.0.6"
itertools = "0.14.0"
keyring = { git = "https://github.com/open-source-cooperative/keyring-rs", branch = "v4", version = "4.0.0-rc.2" }
keyvalues-serde = "0.2.2"
moka = { version = "0.12.10", features = ["future", "sync"] }
notify = "8.1.0"
opener = "0.8.2"
reqwest = "0.12.22"
rfd = { version = "0.15.4", default-features = false, features = ["tokio", "xdg-portal"] }
ringmap = "0.1.4"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
similar = "2.7.0"
steam-rs = "0.5.1"
strip-ansi-escapes = "0.2.1"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
two-face = { version = "*", default-features = false, features = ["syntect-default-fancy"] }
thiserror = "2.0.12"
tokio = "1.46.0"
tokio-util = { version = "0.7.15", features = ["rt"] }
walkdir = "2.5.0"
which = "8.0.0"
notify-rust = "4.11.7"
fancy-regex = "*"
toml = "0.9.2"
chrono = "0.4.41"
portable-pty = "0.9.0"
anyhow = "1.0.98"
single-instance = "0.3.3"
zbus = { version = "5.7.1", optional = true }
governor = "0.10.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
iced_fonts = { git = "https://github.com/Redhawk18/iced_fonts.git", version = "0.2.0", features = ["fontawesome"], rev = "982eb5a" }


[dependencies.iced]
version = "0.14.0-dev"
default-features = false
features = ["wgpu", "tiny-skia", "web-colors", "auto-detect-theme", "advanced", "highlighter", "image", "lazy", "markdown", "svg", "tokio", "thread-pool"]
# features = ["advanced", "image", "lazy", "markdown", "svg", "tokio"]
# git = "https://github.com/iced-rs/iced"

[dependencies.iced_highlighter]
version = "0.14.0-dev"
default-features = false
features = ["syntect-default-fancy"]

[dependencies.iced_aw]
version = "0.13.0-dev"
default-features = false
features = ["card", "grid", "labeled_frame", "number_input", "spinner", "drop_down"]
git = "https://github.com/phantomshift/iced_aw"
branch = "redhawk-more-highlights"

[patch.crates-io]
iced = { git = "https://github.com/phantomshift/iced.git", version = "0.14.0-dev", rev = "7e8575e" }
iced_core = { git = "https://github.com/phantomshift/iced.git", version = "0.14.0-dev", rev = "7e8575e" }
iced_widget = { git = "https://github.com/phantomshift/iced.git", version = "0.14.0-dev", rev = "7e8575e" }
iced_highlighter = { git = "https://github.com/phantomshift/iced.git", version = "0.14.0-dev", rev = "7e8575e" }
steam-rs = { git = "https://github.com/phantomshift/steam-rs.git", branch = "get-details"}

[profile.dev]
# Strange issue with loading lots of images,
# for now building with some optimizations on is enough to alleviate this
# see https://github.com/iced-rs/iced/issues/2166
opt-level = 1
