[package]
name = "lxcomm"
version = "0.4.2"
edition = "2024"
license = "MIT OR APACHE-2.0"
repository = "https://github.com/phantomshift/lxcomm"
description = "Mod browser and downloader made specifically for usage with the GOG version of XCOM2(WOTC) on Linux."

[features]
dbus = ["zbus"]
flatpak = []

[dependencies]
apply = "0.3.0"
bevy_reflect = "0.16.1"
blake3 = "1.8.2"
bstr = "1.12.0"
derivative = "2.2.0"
dircpy = "0.3.19"
etcetera = "0.10.0"
eyre = "0.6.12"
fuse-rust = "0.4.0"
humantime = "2.2.0"
indoc = "2.0.6"
itertools = "0.14.0"
keyring = { git = "https://github.com/open-source-cooperative/keyring-rs", branch = "v4", version = "4.0.0-rc.2" }
keyvalues-serde = "0.2.2"
moka = { version = "0.12.10", features = ["future", "sync"] }
notify = "8.1.0"
opener = "0.8.2"
reqwest = "0.12.22"
rfd = { version = "0.15.4", default-features = false, features = ["tokio", "xdg-portal"] }
ringmap = "0.1.4"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["serde_derive", "rc"] }
serde_json = { version = "1.0.140", features = ["std"] }
similar = "2.7.0"
steam-rs = "0.5.1"
strip-ansi-escapes = "0.2.1"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
two-face = { version = "*", default-features = false, features = ["syntect-default-fancy"] }
thiserror = "2.0.12"
tokio = "1.46.0"
tokio-util = { version = "0.7.15", features = ["rt"] }
walkdir = "2.5.0"
which = "8.0.0"
notify-rust = "4.11.7"
fancy-regex = "*"
toml = "0.9.2"
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.98"
single-instance = { git = "https://github.com/WLBF/single-instance", version = "0.3.3" }
zbus = { version = "5.7.1", optional = true }
governor = "0.10.0"
# Downgraded due to this change in 9.0 which complicates use on Windows
# https://github.com/wezterm/wezterm/commit/9d83458632640e662e3bac6d1d693e4a0cad6e2a
# Changes to portable-pty as a whole since 0.8.1 seem largely inconsequential
portable-pty = "0.8.1"
indexmap = { version = "2.10.0", features = ["serde"] }
dashmap = "6.1.0"
serde_with = "3.14.0"
zip = { version = "4.3.0", default-features = false, features = ["zstd"] }
iced_fonts = { version = "0.3.0", features = ["fontawesome"] }

[dependencies.iced]
version = "0.14.0"
default-features = false
features = ["wgpu", "tiny-skia", "web-colors", "linux-theme-detection", "advanced", "highlighter", "image", "lazy", "markdown", "svg", "tokio", "thread-pool", "wayland", "x11"]

[dependencies.iced_aw]
version = "0.13.0"
default-features = false
features = ["card", "labeled_frame", "number_input", "spinner", "drop_down", "badge"]

[patch.crates-io]
steam-rs = { git = "https://github.com/phantomshift/steam-rs.git", branch = "get-details"}

[profile.dev]
# Strange issue with loading lots of images,
# for now building with some optimizations on is enough to alleviate this
# see https://github.com/iced-rs/iced/issues/2166
opt-level = 1
